Add function setting

--- a/Views/Interviews/_Interview.cshtml
+++ b/Views/Interviews/_Interview.cshtml
@@ -9,7 +9,7 @@
             <div class="col-12 mb-3 mt-3">
                 <div class="w-100 text-end">
                     <a id="export-interview" class="btn btn-outline-secondary">
-                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Xuất
                     </a>
                 </div>
             </div>
