--- a/Views/ClassManagement/_ResultRollcall.cshtml
+++ b/Views/ClassManagement/_ResultRollcall.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="w-100 text-end">
                 <a id="btnExportDssv" class="btn btn-outline-secondary">
-                    <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                    <i class="bi bi-file-earmark-arrow-down me-1"></i> Xuất
                 </a>
                 <input id="idLHPDiemDanh" name="@lhp.MaLHP" value="@lhp.ID" hidden />
             </div>
