--- a/Views/Statisticals/Statistical.cshtml
+++ b/Views/Statisticals/Statistical.cshtml
@@ -47,7 +47,11 @@
                             <li class="breadcrumb-item">
                                 <a href="@Url.Action("index", "dashboard")">Trang chủ</a>
                             </li>
+                            <li class="breadcrumb-item">
+                                Thống kê
+                            </li>
                             <li class="breadcrumb-item" aria-current="page">
+                                Trợ giảng
                             </li>
                         </ol>
                     </nav>
@@ -98,7 +102,7 @@
                                 <label class="form-label"> </label>
                                 <div class="w-100 text-end mt-2">
                                     <a id="exportfile" name="ta02" class="btn btn-outline-secondary">
-                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Xuất
                                     </a>
                                 </div>
                             </div>
@@ -148,7 +152,7 @@
                                 <label class="form-label"> </label>
                                 <div class="w-100 text-end mt-2">
                                     <a id="exportfile" name="ta02" class="btn btn-outline-secondary">
-                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Xuất
                                     </a>
                                 </div>
                             </div>
