--- a/Views/TeachingAssistant/Registereds.cshtml
+++ b/Views/TeachingAssistant/Registereds.cshtml
@@ -105,7 +105,7 @@
                         @*<div class="mb-3 col-md-3 col-12" style="display: flex; flex-direction: row; align-items: end">
                                 <div style="width: 100%; text-align: end">
                                     <a id="btnExport" class="btn btn-outline-secondary">
-                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Xuất
                                     </a>
                                 </div>
                             </div>*@
