--- a/Views/TimeTable/_FilterParentDataGV.cshtml
+++ b/Views/TimeTable/_FilterParentDataGV.cshtml
@@ -30,7 +30,7 @@
             @*<div class="mb-3 col-md-4 col-12" style="display: flex; flex-direction: row; align-items: end">
                 <div class="w-100 text-end">
                     <a id="btnExportTkb" class="btn btn-outline-secondary w-100">
-                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Export
+                        <i class="bi bi-file-earmark-arrow-down me-1"></i> Xuất
                     </a>
                 </div>
             </div>*@
