--- a/Error.cshtml
+++ b/Error.cshtml
@@ -1,17 +1,18 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 @{
+    Layout = null;
     ViewBag.Title = "Error";
 }
 
 <link href="~/Content/error-assets/style.css" rel="stylesheet" />
 
 <h1>404 Page Not Found</h1>
-<p class="zoom-area"><b>Oops!</b> Đã xảy ra lỗi, vui lòng thử lại sau.</p>
+<p class="zoom-area"><b>Oops!</b> Đã xảy ra lỗi, không thể thực hiện tính năng này.</p>
 <section class="error-container">
     <span class="four"><span class="screen-reader-text">4</span></span>
     <span class="zero"><span class="screen-reader-text">0</span></span>
     <span class="four"><span class="screen-reader-text">4</span></span>
 </section>
 <div class="link-container">
-    <a href="@Url.Action("index", "dashboard")" class="more-link">Trở về trang chủ</a>
+    <a href="@Url.Action("index", "dashboard")" class="more-link">Quay về trang chủ</a>
 </div>
